[gd_scene load_steps=5 format=2]

[ext_resource path="res://main/ui/theme/style_box/Focus.tres" type="StyleBox" id=1]
[ext_resource path="res://main/ui/theme/style_box/FocusDisabled.tres" type="StyleBox" id=2]
[ext_resource path="res://main/ui/theme/style_box/RegularDisabled.tres" type="StyleBox" id=3]
[ext_resource path="res://main/ui/menu/save_file_menu/save_file_button_panel/save_file_button_panel.gd" type="Script" id=4]

[node name="SaveFile" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 64 )
focus_mode = 1
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
focused_style = ExtResource( 1 )
disabled_style = ExtResource( 3 )
disbaled_focus_style = ExtResource( 2 )
location_label = NodePath("VBoxContainer/IDContainer/Location")
empty_label = NodePath("EmptyLabel")
num_label = NodePath("VBoxContainer/IDContainer/Number")
time_label = NodePath("VBoxContainer/Time")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 57.0

[node name="IDContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 14.0

[node name="Number" type="Label" parent="VBoxContainer/IDContainer"]
margin_right = 16.0
margin_bottom = 14.0
text = "00"

[node name="Location" type="Label" parent="VBoxContainer/IDContainer"]
margin_left = 20.0
margin_right = 49.0
margin_bottom = 14.0
text = "Area"

[node name="Time" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 102.0
margin_bottom = 32.0
text = "00:00:00 played"

[node name="EmptyLabel" type="Label" parent="."]
visible = false
margin_left = 7.0
margin_top = 25.0
margin_right = 127.0
margin_bottom = 39.0
text = "00 EMPTY"
